# elda

./: .gitignore  Makefile.in  README.md  TODO  configure  configure.ac  elda.conf.in  go.mod  go.sum  main.go  vars.sh  x52mfd.service.in
action/: action.go
config/: config.go
def/: def.go
events/: events.go
handlers/: handlers.go
handlers/edsm/: edsm.go
handlers/filein/: filein.go
handlers/fileout/: fileout.go
handlers/igau/: igau.go
handlers/tcp/: tcp.go
handlers/terminal/: terminal.go
handlers/ticker/: ticker.go
handlers/xdo/: xdo.go
log/: log.go
source/: source.go
src/elda/: .gitignore  Makefile  config.status
src/elda/autom4te.cache/: output.0  requests  traces.0
